kubernetes/orion/manifests/infra/istio/internal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway
  namespace: istio-system
spec:
  type: LoadBalancer 
  selector:
    istio: ingressgateway
  ports:
  - port: 80
    name: http
  # - port: 443
  #   name: https
