kubernetes/orion/manifests/infra/istio/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: default-gateway
  namespace: istio-ingress
spec:
  gatewayClassName: istio
  listeners:
  - name: http-listener
    hostname: "*.bou1der.net"
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
  - name: https-listener
    hostname: "*.bou1der.net"
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
        - name: bou1der-net-tls
          kind: Secret
          group: ""
