kubernetes/orion/manifests/infra/istio/redirect-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: redirect-to-https
  namespace: istio-ingress
spec:
  parentRefs:
    - name: default-gateway
      namespace: istio-ingress
      sectionName: http-listener
  hostnames:
    - "*.bou1der.net"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
